[gd_scene load_steps=24 format=3 uid="uid://dbnhabc63uwlb"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_1i4wv"]
[ext_resource type="Texture2D" uid="uid://c2wm2hy525pkj" path="res://assets/Terrain/TX Tileset Grass.png" id="1_7t57d"]
[ext_resource type="Texture2D" uid="uid://bhs6gyh0hnqev" path="res://assets/Resources/Trees/Tree.png" id="1_24wjt"]
[ext_resource type="PackedScene" uid="uid://dib3repi28yf6" path="res://scenes/player.tscn" id="1_q33en"]
[ext_resource type="Texture2D" uid="uid://cl4h1m5r7x4au" path="res://assets/Terrain/TX Tileset Stone Ground.png" id="2_8o6sd"]
[ext_resource type="PackedScene" uid="uid://kd876yvv7ru4" path="res://scenes/goblin.tscn" id="2_r7a5t"]
[ext_resource type="Texture2D" uid="uid://brsgvfpxrxlbt" path="res://assets/Terrain/TX Struct.png" id="3_4w1yx"]
[ext_resource type="PackedScene" uid="uid://h2gn23tvfq76" path="res://scenes/arrow.tscn" id="3_dm3jl"]
[ext_resource type="PackedScene" uid="uid://b3ck6xkkw5o1m" path="res://scenes/hud.tscn" id="4_e8i7w"]
[ext_resource type="Texture2D" uid="uid://b4pjq78dd82qa" path="res://assets/Terrain/TX Tileset Wall.png" id="4_vi4ue"]
[ext_resource type="PackedScene" uid="uid://y2nxmu2sxjgt" path="res://scenes/tree.tscn" id="7_pdqxr"]
[ext_resource type="PackedScene" uid="uid://dvduasbeqy0cr" path="res://scenes/sheep.tscn" id="12_ym70r"]
[ext_resource type="PackedScene" uid="uid://4vc523m1ljoo" path="res://scenes/safezone.tscn" id="13_52rl7"]
[ext_resource type="AudioStream" uid="uid://dgcvoow752ndx" path="res://assets/Music/death.wav" id="14_ekt6k"]
[ext_resource type="AudioStream" uid="uid://df02gfljhg50v" path="res://assets/Music/little town - orchestral.ogg" id="15_ksaby"]
[ext_resource type="AudioStream" uid="uid://bb4yucdr7sxii" path="res://assets/Music/gameover.wav" id="16_dvupo"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_j5alf"]
texture = ExtResource("1_24wjt")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6we3g"]
texture = ExtResource("1_7t57d")
0:0/size_in_atlas = Vector2i(8, 8)
0:0/0 = 0
8:0/size_in_atlas = Vector2i(8, 8)
8:0/0 = 0
0:8/size_in_atlas = Vector2i(8, 8)
0:8/0 = 0
8:8/size_in_atlas = Vector2i(8, 8)
8:8/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_80hc2"]
texture = ExtResource("2_8o6sd")
0:0/size_in_atlas = Vector2i(6, 6)
0:0/0 = 0
10:0/size_in_atlas = Vector2i(6, 6)
10:0/0 = 0
0:6/size_in_atlas = Vector2i(6, 2)
0:6/0 = 0
6:6/size_in_atlas = Vector2i(2, 2)
6:6/0 = 0
6:0/size_in_atlas = Vector2i(2, 6)
6:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_h5p4k"]
texture = ExtResource("3_4w1yx")
2:2/size_in_atlas = Vector2i(4, 6)
2:2/0 = 0
25:1/size_in_atlas = Vector2i(6, 5)
25:1/0 = 0
26:8/size_in_atlas = Vector2i(4, 4)
26:8/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_31vfs"]
texture = ExtResource("4_vi4ue")
2:12/size_in_atlas = Vector2i(8, 4)
2:12/0 = 0
2:12/0/z_index = 1

[sub_resource type="TileSet" id="TileSet_ayw74"]
sources/3 = SubResource("TileSetAtlasSource_6we3g")
sources/4 = SubResource("TileSetAtlasSource_80hc2")
sources/5 = SubResource("TileSetAtlasSource_h5p4k")
sources/6 = SubResource("TileSetAtlasSource_31vfs")
sources/0 = SubResource("TileSetAtlasSource_j5alf")

[sub_resource type="Curve2D" id="Curve2D_7yixb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -11, -1, 0, 0, 0, 0, 1266, -4, 0, 0, 0, 0, 1360, 311.884, 0, 0, 0, 0, 1266, 620, 0, 0, 0, 0, -12, 619, 0, 0, 0, 0, -160, 317.062, 0, 0, 0, 0, -11, -1)
}
point_count = 7

[node name="main" type="Node2D"]
y_sort_enabled = true
position = Vector2(8, 343)
script = ExtResource("1_1i4wv")
mob_scene = ExtResource("2_r7a5t")
arrow_scene = ExtResource("3_dm3jl")

[node name="HUD" parent="." instance=ExtResource("4_e8i7w")]

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
y_sort_enabled = true
position = Vector2(-80, -31)
tile_set = SubResource("TileSet_ayw74")
collision_visibility_mode = 1
format = 2
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(2490389, 131078, 12, 2359344, 3, 0, 2359352, 3, 0, 2359360, 3, 0, 2359368, 3, 0, 2359376, 3, 0, 2490398, 131078, 12, 2490399, 131078, 12, 2490400, 131078, 12, -196528, 3, 0, -196529, 3, 0, -196530, 3, 0, -130995, 3, 0, -130996, 3, 0, -130997, 3, 0, -130998, 3, 0, -196535, 3, 0, -196536, 3, 0, -196537, 3, 0, -196538, 3, 0, -196539, 3, 0, -196540, 3, 0, -196541, 3, 0, -196542, 3, 0, -196543, 3, 0, -196544, 3, 0, -131008, 3, 0, -131009, 3, 0, -131010, 3, 0, -131011, 3, 0, -131012, 3, 0, -131013, 3, 0, -131014, 3, 0, -131015, 3, 0, -131016, 3, 0, -131017, 3, 0, -131018, 3, 0, -131019, 3, 0, -131020, 3, 0, -131021, 3, 0, -131022, 3, 0, -131023, 3, 0, -131024, 3, 0, -131025, 3, 0, -131026, 3, 0, -131027, 3, 0, -131028, 3, 0, -131029, 3, 0, -131030, 3, 0, -131031, 3, 0, -131032, 3, 0, -131033, 524291, 0, -131034, 524291, 0, -131035, 3, 0, -131036, 3, 0, -131037, 3, 0, -131038, 3, 0, -131039, 3, 0, -131040, 3, 0, -131041, 3, 0, -131042, 3, 0, -131043, 3, 0, -131044, 3, 0, -131045, 3, 0, -131046, 3, 0, -131047, 3, 0, -131048, 3, 0, -131049, 3, 0, -131050, 3, 0, -131051, 3, 0, -131052, 3, 0, -131053, 524291, 0, -131054, 3, 0, -131055, 3, 0, -131056, 3, 0, -196593, 3, 0, -196594, 3, 0, -196595, 3, 0, -196596, 3, 0, -196597, 524291, 0, -196598, 3, 0, -196599, 3, 0, -196600, 3, 0, -262131, 3, 0, -262130, 3, 0, -262129, 3, 0, -262128, 3, 0, -262127, 3, 0, -262126, 3, 0, -262125, 3, 0, -262124, 3, 0, -262123, 3, 0, -262122, 3, 0, -262121, 3, 0, -262120, 3, 0, -262119, 3, 0, -262118, 3, 0, -262117, 3, 0, -262116, 3, 0, -262115, 3, 0, -262114, 3, 0, -262113, 524291, 0, -262112, 524291, 0, -262111, 524291, 0, -262110, 524291, 0, -262109, 524291, 0, -262108, 3, 0, -262107, 3, 0, -262106, 3, 0, -262105, 3, 0, -262104, 3, 0, -262103, 3, 0, -262102, 3, 0, -262101, 3, 0, -262100, 3, 0, -262099, 3, 0, -262098, 3, 0, -262097, 3, 0, -262096, 3, 0, -262095, 3, 0, -262094, 3, 0, -262093, 3, 0, -262092, 3, 0, -262091, 3, 0, -262090, 3, 0, -262089, 3, 0, -262088, 3, 0, -262087, 3, 0, -262086, 3, 0, -262085, 3, 0, -262084, 3, 0, -524208, 3, 0, -524209, 3, 0, -524210, 3, 0, -524211, 3, 0, -524212, 3, 0, -524213, 3, 0, -524214, 3, 0, -524215, 3, 0, -524216, 3, 0, -524217, 3, 0, -524218, 3, 0, -524219, 3, 0, -524220, 3, 0, -524221, 3, 0, -524222, 3, 0, -524223, 3, 0, -524224, 3, 0, -524225, 3, 0, -524226, 3, 0, -524227, 3, 0, -524228, 3, 0, -524229, 3, 0, -524230, 3, 0, -524231, 3, 0, -524232, 3, 0, -524233, 3, 0, -524234, 3, 0, -524235, 3, 0, -524236, 3, 0, -524237, 3, 0, -524238, 3, 0, -524239, 3, 0, -524240, 3, 0, -524241, 3, 0, -524242, 3, 0, -524243, 3, 0, -524244, 3, 0, -524245, 3, 0, -524246, 3, 0, -524247, 3, 0, -524248, 3, 0, -524249, 3, 0, -524250, 3, 0, -524251, 3, 0, -524252, 3, 0, -524253, 3, 0, -524254, 3, 0, -524255, 3, 0, -524256, 3, 0, -524257, 3, 0, -524258, 3, 0, -524259, 3, 0, -524260, 3, 0, -524261, 3, 0, -458726, 3, 0, -458727, 3, 0, -458728, 3, 0, -458729, 3, 0, -458730, 3, 0, -458731, 3, 0, -458732, 3, 0, -458733, 3, 0, -458734, 3, 0, -458735, 3, 0, -458736, 3, 0, -458737, 3, 0, -458738, 3, 0, -458739, 3, 0, -458740, 3, 0, -458741, 3, 0, -458742, 3, 0, -458743, 3, 0, -458744, 3, 0, -524280, 3, 0, -524279, 3, 0, -524278, 3, 0, -524277, 3, 0, -524276, 3, 0, -524275, 3, 0, -524274, 3, 0, -524273, 3, 0, -524272, 3, 0, -524271, 3, 0, -524270, 3, 0, -524269, 3, 0, -524268, 3, 0, -524267, 3, 0, -524266, 3, 0, -327641, 3, 0, -196572, 3, 0, -458712, 524291, 0, -196553, 524291, 0, -327610, 524291, 0, -262065, 524291, 0, -393175, 524291, 0, -327655, 524291, 0, -458707, 524291, 0, -65505, 524291, 0, 196649, 524291, 0, 196650, 524291, 0, 65589, 524291, 0, 65590, 524291, 0, 54, 524291, 0, -327603, 524291, 0, 196684, 524291, 0, 524364, 524291, 0, 1048650, 524291, 0, 655439, 524291, 0, -589810, 524291, 0, -589809, 524291, 0, -393196, 524291, 0, -65517, 524291, 0, 524304, 524291, 0, -196589, 524291, 0, -327639, 524291, 0, -393179, 3, 0, -458720, 3, 0, -458722, 3, 0, -458723, 3, 0, -458724, 3, 0, -196581, 3, 0, -65510, 3, 0, 28, 3, 0, 196637, 3, 0, -1048568, 3, 0, -1048560, 3, 0, -1048553, 3, 0, -1048552, 3, 0, -1048544, 3, 0, -1048536, 3, 0, -1048528, 3, 0, -1048520, 3, 0, -1048512, 3, 0, -1048504, 3, 0, -1048496, 3, 0)
layer_1/name = "Layer1"
layer_1/tile_data = PackedInt32Array(327688, 524291, 0, 327696, 524291, 0, 327704, 524291, 0, 851992, 524291, 0, 851984, 524291, 0, 851976, 524291, 0, 327712, 524291, 0, 852000, 524291, 0, 1376264, 3, 0, 1376272, 524291, 0, 327697, 3, 0, 1835016, 524291, 8, 1835024, 524291, 8, 2359312, 3, 8, 2359304, 3, 1342177288, 1900560, 524291, 1342177288, 1376280, 3, 0, 1900568, 3, 0, 2359320, 3, 1610612744, 2359328, 524291, 0, 1835040, 524291, 0, 1376288, 3, 0, 327720, 3, 0, 327728, 3, 0, 327736, 3, 0, 327744, 3, 0, 327752, 3, 0, 327760, 3, 0, 852008, 524291, 0, 327737, 524291, 0, 852037, 524291, 0, 852016, 3, 0, 1376296, 3, 0, 1376304, 3, 0, 852024, 3, 0, 852032, 3, 0, 852045, 3, 0, 852048, 3, 0, 1900584, 3, 0, 1900592, 3, 0, 1376312, 3, 0, 1376320, 3, 0, 1376328, 3, 0, 1376336, 3, 0, 1900600, 524291, 0, 1900624, 524291, 0, 1900616, 524291, 0, 1900608, 524291, 0, 2359336, 524291, 8, 2883616, 3, 8, 3276832, 3, 8, 3080217, 131077, 1879048194, 2490398, 131078, 12, 2490404, 131078, 12, 2490408, 131078, 12, 2490393, 131078, 12, 2490386, 131078, 12, 2490387, 131078, 12, 2490389, 131078, 12, 2490390, 131078, 12, 2490388, 131078, 12, 2490379, 131078, 12, 2490391, 131078, 12, 2490392, 131078, 12, 2490372, 131078, 12, 2490376, 131078, 12, 2490400, 131078, 12, 2490414, 131078, 12, 2490419, 131078, 12, 2490424, 131078, 12, 2490428, 131078, 12, 2490433, 131078, 12, 2490438, 131078, 12, 2490442, 131078, 12, 2490447, 131078, 12, 2490449, 131078, 12)

[node name="SafeZone" parent="." instance=ExtResource("13_52rl7")]
z_index = -1
position = Vector2(576, 243)

[node name="Player" parent="." instance=ExtResource("1_q33en")]
y_sort_enabled = true
position = Vector2(629, 289)

[node name="Tree" parent="." instance=ExtResource("7_pdqxr")]
z_index = 1
position = Vector2(664, -47)

[node name="Tree2" parent="." instance=ExtResource("7_pdqxr")]
position = Vector2(220, 390)

[node name="Tree3" parent="." instance=ExtResource("7_pdqxr")]
position = Vector2(352, 186)

[node name="Tree4" parent="." instance=ExtResource("7_pdqxr")]
position = Vector2(640, 441)

[node name="Tree5" parent="." instance=ExtResource("7_pdqxr")]
position = Vector2(1062, 135)

[node name="Tree6" parent="." instance=ExtResource("7_pdqxr")]
position = Vector2(1040, -239)

[node name="Tree7" parent="." instance=ExtResource("7_pdqxr")]
position = Vector2(232, -143)

[node name="Tree8" parent="." instance=ExtResource("7_pdqxr")]
position = Vector2(1099, 469)

[node name="Tree9" parent="." instance=ExtResource("7_pdqxr")]
position = Vector2(824, 169)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="MobPath" type="Path2D" parent="."]
position = Vector2(0, -337.821)
scale = Vector2(1, 1.54487)
curve = SubResource("Curve2D_7yixb")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(-11, -1)
rotation = -0.00234925

[node name="Sheep" parent="." instance=ExtResource("12_ym70r")]
position = Vector2(512, -127)

[node name="Sheep2" parent="." instance=ExtResource("12_ym70r")]
position = Vector2(384, 321)

[node name="Sheep3" parent="." instance=ExtResource("12_ym70r")]
position = Vector2(1048, -55)

[node name="Sheep4" parent="." instance=ExtResource("12_ym70r")]
position = Vector2(136, 49)

[node name="Sheep5" parent="." instance=ExtResource("12_ym70r")]
position = Vector2(880, -263)

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_ekt6k")
volume_db = -25.148

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_ksaby")
volume_db = -15.49

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_dvupo")
volume_db = -7.376

[connection signal="start" from="HUD" to="." method="_on_game_start"]
[connection signal="start" from="HUD" to="HUD" method="_on_start"]
[connection signal="shoot" from="Player" to="." method="_on_player_shoot"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
